yclwzl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yclwzl-service
spec:
  selector:
    app: yclwzl
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
