yclwzl/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yclwzl-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - yclwzl-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: yclwzl-service
